Modify file structure

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>jinsunkimdev 3D text</title>
 </head>
 
@@ -14,7 +15,7 @@
             <h1>JINSUNKIMDEV</h1>
             <form id="input__form" class="simple__form">
                 <label for="name">What's Your Name? (4 to 12 characters):</label>
-                <input type="text" id="input__name" name="name" required minlength="4" maxlength="12" size="15" autocomplete="off">
+                <input type="text" pattern="[A-Za-z]+" id="input__name" name="name" required minlength="4" maxlength="12" size="15" autocomplete="off" placeholder="Please enter English only">
                 <button type="submit" id="inputBtn" value="INPUT">SUBMIT</button>
             </form>
         </header>
