--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
                 <input type="text" pattern="^[a-zA-Z_]+( [a-zA-Z_]+)*$" id="input__name" name="name" required minlength="4" maxlength="12" size="15" autocomplete="off" placeholder="Please enter English only">
                 <button type="submit" id="inputBtn" value="INPUT">SUBMIT</button>
             </form>
+            <button id="resetViewBtn">Initialize the view</button>
         </header>
     </main>
 </body>
